--- a/src/docs/02_architecture_constraints.adoc
+++ b/src/docs/02_architecture_constraints.adoc
@@ -10,7 +10,7 @@ Previous architecture decisions that may impact the solution design.
 [options="header",cols="1,2"]
 |===
 |Constraint|Explanation
-| SOLID for a decentralized  architecture | One of the aims of 'Viade' is to be a decentralized app, so we need a decentralized  technology like SOLID
+| SOLID and its PODs for a decentralized  architecture | One of the aims of 'Viade' is to be a decentralized app, so we need a decentralized  technology like SOLID and its PODs
 | React for presentation | We were told to use 'React' in our project
 | Use of GitHub | Our project is going to be hosted on a GitHub repository
 | Testing | We need to create tests so we can be sure that our project is correct and it is working like it has to work and we need to have at least a 60% of coverage
