--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -9,13 +9,18 @@ Let's talk about Technical decisions:
 
 * *Using JavaScript*: We talked about how to implement the logic of the project. We can take advantage of the functionalities of React, but perhaps we would need to implements something more complicated, so we agreed on using JavaScript because we have already used it and it allows us to do all the logic we thought about.
 
+* *Use the React Solid template as a base*: We don't have much time or experience, so we used a template to start our project.
+
 * *Libraries*: We opened an link:https://github.com/Arquisoft/viade_es2c/issues/5[issue] in our GitHub repository where we researched possible libraries to use.
 
 * *Pull request*: We decided that we are going to use the "pull request" functionality of GitHub because it seems that it helps you get better results in your commits.
 
-* *Cucumber*: We are going to use Cucumber to create our tests.
+* *Puppeteer*: We are going to use Puppeteer to create our tests.
 
 * *WebStorm*: We will use WebStorm to develop our app because of all the facilities that it gives us for the React programming part
+
+*Parsers*: A good application should be able to admit differents formats, so we used some parsers to let the user create a route through them.
+
 We want to fulfill some quality goals:
 
 * *Usability*: Viade has to be intuitive. We are going to use the knowledge acquired during this career.
