Edited the block view and fixed some logic

--- a/public/locales/en-US/translation.json
+++ b/public/locales/en-US/translation.json
@@ -204,6 +204,7 @@
   "route" : {
     "share" : "Share",
     "open" : "Open route",
-    "close" : "Close route"
+    "close" : "Close route",
+    "media" : "Display Media"
   }
 }
