--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -12,6 +12,6 @@ image::10_QualityRequirements.png[Quality Tree]
 | Privacy | The user is the owner of his data according to the SOLID principles | HIGH 
 | Usability | The user must have to use all the features of the application easily  | HIGH
 | Maintainability | The architecture of the system should be well designed, this will allow to the developers to add features and modify it easily | MEDIUM
-| Scalability | The response times of the app must be reasonable when the number of users grows reasonably and the features of the application must perform in the same way with a high number of users | MEDIUM
+| Scalability | The response times of the app must be less than 3 seconds while the application is not overloaded | MEDIUM
 | Availability | The users must have his routes available when they want to look for it | HIGH
 |===
