--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -19,7 +19,7 @@ Let's talk about Technical decisions:
 
 * *WebStorm*: We will use WebStorm to develop our app because of all the facilities that it gives us for the React programming part
 
-*Parsers*: A good application should be able to admit differents formats, so we used some parsers to let the user create a route through them.
+* *Parsers*: A good application should be able to admit differents formats, so we used some parsers to let the user create a route through them.
 
 We want to fulfill some quality goals:
 
