--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -209,6 +209,7 @@
     "share" : "Compartir",
     "open" : "Abrir ruta",
     "close" : "Cerrar ruta",
-    "media" : "Ver Multimedia"
+    "media" : "Ver Multimedia",
+    "comments": "Comentarios"
   }
 }
