--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -205,6 +205,7 @@
     "share" : "Share",
     "open" : "Open route",
     "close" : "Close route",
-    "media" : "Display Media"
+    "media" : "Display Media",
+    "comments": "Comments"
   }
 }
