--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -23,7 +23,10 @@
     "description": "La ruta debe tener una descripción.",
     "save": "La ruta se ha guardado correctamente.",
     "notShareRoute" : "No se ha podido compartir la ruta",
-    "sendNotification": "Error: RouteConst > sendNotification"
+    "sendNotification": "Error: RouteConst > sendNotification",
+    "markers": "Añada marcadores al mapa para crear la ruta",
+    "uploadfile": "Suba un archivo",
+    "parsererror": "Algo ha salido mal. Es posible que su archivo no sea válido"
   },
   "login": {
     "title": "Hola! Bienvenido a Viade",
