--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -66,6 +66,7 @@
     "timeline":"Ver rutas",
     "createroute":"Crear ruta",
     "friends":"Amigos",
+    "friendsGroups":"Grupos de amigos",
     "languages": {
       "en": "EN",
       "es": "ES"
