--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -62,6 +62,7 @@
     "timeline":"Routes",
     "createroute":"New route",
     "friends":"Friends",
+    "friendsGroups":"Groups of friends",
     "languages": {
       "en": "EN",
       "es": "ES"
