--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -220,5 +220,12 @@
     "show": "Show comment",
     "noComments": "No comments.",
     "createdAt": "Created at "
+  },
+  "covid": {
+    "carefull": "Please be carefull.",
+    "tip": "We are aware that this application is very cool but please stay home. Go outside only when allowed.",
+    "tip1": "Stay home as much as possible.",
+    "tip2": "Wash your hands often. Use soap and water or an alcohol-based hand sanitizer.",
+    "tip3": "Keep a safe distance from anyone who coughs or sneezes."
   }
 }
