Internationalization of the groups os friends

--- a/public/locales/en-US/translation.json
+++ b/public/locales/en-US/translation.json
@@ -207,6 +207,24 @@
     "userlogged": "The user is not logged in",
     "noFriends": "You don't have any friends :("
   },
+  "friendsGroups": {
+    "errorParticipants" : "There's no participants",
+    "errorDescription" : "There's no description",
+    "description" : "Description ",
+    "participants": "Participants : ",
+    "title" : "Groups of friends",
+    "create" : "Create new group",
+    "groupName" : "Name of the group",
+    "name" : "Name",
+    "newGroup" : "New group",
+    "groupDescription": "Group's description",
+    "select" : "Select friends to add to the group",
+    "errorGroupName" : "The group needs a name",
+    "errorFriend" : "You need at least one friend in the group",
+    "creating" : "Creating the group",
+    "done" : "Done",
+    "mapTitle": "Map"
+  },
   "route": {
     "share": "Share",
     "open": "Open route",
