--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -9,9 +9,9 @@ image::10_QualityRequirements.png[Quality Tree]
 [options="header",cols="1,2,1"]
 |===
 | Quality attribute | Quality scenario | Priority
-| Privacy | The user is the owner of his data according to the SOLID principles | HIGH 
-| Usability | The user must have to use all the features of the application easily  | HIGH
-| Maintainability | The architecture of the system should be well designed, this will allow to the developers to add features and modify it easily | MEDIUM
-| Scalability | The response times of the app must be less than 3 seconds while the application is not overloaded | MEDIUM
-| Availability | The users must have his routes available when they want to look for it | HIGH
+| Privacy | The user is the owner of his data according to the SOLID principles | HIGH/HIGH 
+| Usability | The user must have to use all the features of the application easily  | HIGH/HIGH
+| Maintainability | The architecture of the system should be well designed, this will allow to the developers to add features and modify it easily | MEDIUM/LOW
+| Scalability | The response times of the app must be less than 1 second while the application is not overloaded | MEDIUM/HIGH
+| Availability | The users must have his routes available when they want to look for it | HIGH/HIGH
 |===
